Bug 461021 - Xwayland window blur under new "Don't scale Xwayland" option in 5.26 doesn't work properly.
Summary: Xwayland window blur under new "Don't scale Xwayland" option in 5.26 doesn't...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-26 14:55 UTC by Weng Xuetian
Modified: 2022-11-03 18:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2022-10-26 14:55:48 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Enable blur
2. Try an application with blur

OBSERVED RESULT
Blur region is scaled

EXPECTED RESULT
Blur region should not be scaled like Xwayland app itself.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Archlinux
(available in About System)
KDE Plasma Version: 5.26.1
KDE Frameworks Version: 5.99
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-10-26 18:25:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3122
Comment 2 Weng Xuetian 2022-11-01 00:33:38 UTC
Git commit fda53d8253b5583d253bd35315229768fd414578 by Xuetian Weng, on behalf of Weng Xuetian.
Committed on 31/10/2022 at 22:42.
Pushed by xuetianweng into branch 'master'.

Fix blur/contrast for X11 window if Xwayland is not scaled.

X property from X11 window contains X native coordinates. Need to
apply transform to use them in the effects like blur/contrast.

M  +2    -1    src/effects/backgroundcontrast/contrast.cpp
M  +2    -1    src/effects/blur/blur.cpp

https://invent.kde.org/plasma/kwin/commit/fda53d8253b5583d253bd35315229768fd414578
Comment 3 Weng Xuetian 2022-11-01 03:21:44 UTC
Git commit 00388f2b8a4fb81515eadf2768d49d09c4e31d6d by Weng Xuetian.
Committed on 01/11/2022 at 03:21.
Pushed by xuetianweng into branch 'Plasma/5.26'.

Fix blur/contrast for X11 window if Xwayland is not scaled.

X property from X11 window contains X native coordinates. Need to
apply transform to use them in the effects like blur/contrast.
(cherry picked from commit fda53d8253b5583d253bd35315229768fd414578)

M  +2    -1    src/effects/backgroundcontrast/contrast.cpp
M  +2    -1    src/effects/blur/blur.cpp

https://invent.kde.org/plasma/kwin/commit/00388f2b8a4fb81515eadf2768d49d09c4e31d6d