Fix blur/contrast for X11 window if Xwayland is not scaled.

X property from X11 window contains X native coordinates. Need to
apply transform to use them in the effects like blur/contrast.

BUG:461021
(cherry picked from commit fda53d8253b5583d253bd35315229768fd414578)